sec_lesson_steps ready

--- a/index.html
+++ b/index.html
@@ -582,9 +582,10 @@
     </section>
     <!-- / sec_success_stories -->
 
-    <!-- sec_9 -->
+    <!-- sec_lesson_steps -->
     <section class="sec sec_lesson_steps">
         <div class="container">
+            <img class="abs_pic" src="img/sec_9/abs_pic.svg" alt="">
             <div class="sec_title">
                 <img src="img/sec_9/title_label.svg" alt="title_label">
                 <h2>Как будет проходить ваше обучение?</h2>
@@ -606,48 +607,83 @@
                     </svg>
                 </span>
                 <div class="sliderAuthors authors">
-                    <div class="col-md-4 py-5 px-4">
+                    <div class="col-12 py-5 px-4">
                         <div class="card_profile">
-                            <div class="icon" style="background-image: url('img/sec_6/port_1.jpg');"></div>
-                            <h3>Константин Лашкевич</h3>
-                            <p>Инвестор IT, ed-tech, LMS, Практик корпоративного управления</p>
-                            <i>“Эта платформа, проект и команда - создают нечто космическое. На платформе собран весь инструментарий для продвижения личного бренда и полной упаковки продукта полного цикла, начиная от лендинга до награждения
-                                участников. Супер!”</i>
-                        </div>
-                    </div>
-                    <div class="col-md-4 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon" style="background-image: url('img/sec_6/port_2.jpg');"></div>
-                            <h3>Ицхак Пинтосевич</h3>
-                            <p>Эксперт №1 в СНГ по мотивации <br> и раскрытию потенциала</p>
-                            <i>“Я давно искал возможность повысить доходимость учеников до конца курсов. Smart Expert - это то решение, которое мне отлично подходит. Геймификации, Инструменты маркетинга, продвижение личного бренда - это то, что нужно
-                                мне, моим экспертам и моей команде коучей IPACT. ”</i>
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Обучайтесь на любом удобном устройстве</h3>
+                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
+                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md-4 py-5 px-4">
+                    <div class="col-12 py-5 px-4">
                         <div class="card_profile">
-                            <div class="icon" style="background-image: url('img/sec_9/iomtov.jpg');"></div>
-                            <h3>Йом-Тов Шуфотинский</h3>
-                            <p>Автор курса “Семейные Финансы”</p>
-                            <i>“Я долго искал платформу для первого запуска своего курса “Семейные Финансы”. Smart Expert - отлично подошел для этого. Здесь я не только смог запустить свой курс, но также получил отличные инструменты для привлечения
-                                клиентов, как на обучающий продукт, так и на личные консультации. ”</i>
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_2.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Групповая работа и поддержка окружения</h3>
+                                <p>Вся работа по обучающим проектам будет проходить в закрытой социальной сети, которая открывает вам:
+                                    <br>- новое окружение
+                                    <br>- контакты со специалистами
+                                    <br>- доступ к наставникам и кураторам
+                                    <br><br>
+                                    Вы легко сможете делиться идеями, получать идеи, вдохновляться и обсуждать их с другими участниками курса.</p>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md-4 py-5 px-4">
+                    <div class="col-12 py-5 px-4">
                         <div class="card_profile">
-                            <div class="icon" style="background-image: url('img/sec_6/port_3.jpg');"></div>
-                            <h3>Айше Борсеитова</h3>
-                            <p>Школа английского языка <br> WOW-EFFECT</p>
-                            <i>“Мой марафон Английский за 30 дней на платформе Smart Expert - это нечто! У меня еще никогда небыло такой высокой вовлеченности учеников в процесс обучения. Smart Expert - это просто бомба для авторов курса!”</i>
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_3.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Инструмент создания личного бренда</h3>
+                                <p>Самое важное в XXI-веке - это Личный Бренд. Люди хотят работать с известными людьми. Компании хотят работать с известными людьми. Все - хотят быть рядом с тем, кто грамотно рассказывает о себе, своих навыках, своих
+                                    целях и планах на будущее. И все это - вы получаете в проекте Smart Expert!
+                                    <br><br>Оформите личный профиль в закрытой социальной сети, пишите экспертные статьи и публикуйте их на аудиторию более 2 млн человек. Это ваша возможность к быстрому Х-кратному росту! </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_4.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Коучи для поддержки и мотивации</h3>
+                                <p>Путь к изменениям и обретению новых навыков - тяжел и тернист. Для этого в процессе обучения вас будут сопровождать коучи, которые помогут справиться с трудностями, дадут “пендаль” мотивации и смогут вывести вас на
+                                    новый уровень.
+                                    <br><br>Поддержка коучей - один из важнейших элементов вашего роста над собой, развития и движению к новым целям. С ними - вы будете готовы действовать на максимум, несмотря на ограничения! </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon">
+                                <img src="img/sec_lesson_steps/ic_5.svg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3>Глобальный поиск экспертов</h3>
+                                <p>Хотите быстро получить профессиональную консультацию? Необходим проверенный эксперт для решения сложной задачи? Хотите с кем-то обсудить план своего путешествия? Глобальный поиск экспертов - позволит вам найти
+                                    специалиста в нужной области всего за 1 минуту!
+                                    <br><br>
+                                    Выбирайте направление, сортируйте по рейтингу - и перед вами появится список из лучших экспертов! </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- / sec_9 -->
+    <!-- / sec_lesson_steps -->
 
     <section id="my-projects" class="sec sec_cost">
         <img alt="" class="abs_pic brain" src="img/abs_pic/brain.svg">
@@ -816,7 +852,7 @@
                 speed: 400, //ms'
                 auto: true,
                 loop: true,
-                pager: false,
+                pager: true,
                 pause: 3500,
                 keyPress: true,
                 controls: false,
