--- a/index.html
+++ b/index.html
@@ -783,7 +783,26 @@
     <!-- sec_12 -->
     <section class="sec sec_12">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-between">
+                <div class="col-md-3">
+                    <h4>Компания</h4>
+                    <ul>
+                        <li><a href="#tarifs">Цены</a></li>
+                        <li><a href="#">О нас</a></li>
+                        <li><a href="#">База знаний</a></li>
+                        <li><a href="#" class="d-none">Пробная версия</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h4>Продукты</h4>
+                    <ul>
+                        <li><a href="#platforma_dlya_obuchenia">Платформа для онлайн-обучения</a></li>
+                        <li><a href="#marketing_instrument">Инструменты маркетинга</a></li>
+                        <li><a href="#prodvizhenie_lichnogo_brenda">Продвижение личного бренда</a></li>
+                        <li><a href="#globalnyi_poisk">Глобальный поиск экспертов</a></li>
+                        <li><a href="#delovaya_socialnaya_set">Деловая социальная сеть</a></li>
+                    </ul>
+                </div>
                 <div class="col-md-3">
                     <h4>Контактная информация</h4>
 
@@ -797,15 +816,6 @@
                             <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
                         </tr>
                     </table>
-                </div>
-                <div class="col-md-6">
-                    <div class="soc_links_wrapp mx-md-auto">
-                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="form-group">
