--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -23,16 +23,16 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#about-expert">Програма курса</a>
+                    <a class="nav-link" href="#course_programm">Програма курса</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my-projects">Моя экспертность</a>
+                    <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my_expertize">Отзывы</a>
+                    <a class="nav-link" href="#reviews">Отзывы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contacts">Я - наставник</a>
+                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -121,6 +121,9 @@
     <!-- sec_about_course -->
     <section class="sec sec_about_course">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
                 <h2>О курсе</h2>
@@ -177,7 +180,7 @@
     <!-- / sec_about_course -->
 
     <!-- sec_profile -->
-    <section class="sec sec_profile">
+    <section id="my_expertize" class="sec sec_profile">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
@@ -215,8 +218,12 @@
     <!-- / sec_profile -->
 
     <!-- sec_programm -->
-    <section class="sec sec_programm">
+    <section id="course_programm" class="sec sec_programm">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/sec_my_contacts/title_label.svg" alt="title_label">
                 <h2>Программа курса</h2>
@@ -340,12 +347,14 @@
 
     <!-- / sec_tabs -->
     <section class="sec sec_tabs">
-        <div class="sec_title">
-            <img src="img/sec_your_result/title_label.svg" alt="title_label">
-            <h2>Кому подойдет “12 шагов для Х-кратного роста в карьере и бизнесе”</h2>
-            <p>Что говорят о моих практикумах те, кто уже прошел обучение?</p>
-        </div>
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <div class="sec_title">
+                <img src="img/sec_your_result/title_label.svg" alt="title_label">
+                <h2>Кому подойдет “12 шагов для Х-кратного роста в карьере и бизнесе”</h2>
+                <p>Что говорят о моих практикумах те, кто уже прошел обучение?</p>
+            </div>s
             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link active" id="pills-home-tab" tabindex data-toggle="pill" data-target="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Менеджерам</a>
@@ -781,7 +790,7 @@
     <!-- / sec_are_you_ready -->
 
     <!-- sec_12 -->
-    <section class="sec sec_12">
+    <section id="ya_nastavnik" class="sec sec_12">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-3">
