--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <img src="img/sec_your_result/title_label.svg" alt="title_label">
                 <h2>Кому подойдет “12 шагов для Х-кратного роста в карьере и бизнесе”</h2>
                 <p>Что говорят о моих практикумах те, кто уже прошел обучение?</p>
-            </div>s
+            </div>
             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link active" id="pills-home-tab" tabindex data-toggle="pill" data-target="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Менеджерам</a>
