--- a/isaac.html
+++ b/isaac.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo_isaac.png" alt=""></a>
+        <a class="navbar-brand" href="#" style="background-color: #509b79;padding: 12.01px 25px;"><img src="img/logo_se.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -30,9 +30,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#reviews">Отзывы</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -77,7 +74,7 @@
                             текстом. Хочешь стать автором? Войди в этот ритм и пиши каждый день!</p>
                         <div class="card__footer" style="margin-top: 25px;">
                             <span class="price"><span style="text-decoration: line-through;opacity:0.6;">85$</span>&nbsp;&nbsp; 0$</span>
-                            <a href="" class="btn btn-success">Принять участие</a>
+                            <a href="https://virtual.p.smartexpert.net/login" target="_blank" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
                 </div>
@@ -945,7 +942,7 @@
                 <div class="media align-items-center">
                     <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h4 class="card_title">12 шагов для Х-кратного роста в карьере и бизнесе</h4>
+                        <h4 class="card_title">Пишем книгу 30 дней</h4>
                         <div class="b-card-body">
                             <ul class="list">
                                 <li>20 контентных прямых эфиров и сессий “вопрос-ответ”</li>
@@ -958,7 +955,7 @@
                             <div class="right">
                                 <div class="label">Стоимость:</div>
                                 <div class="price"><span style="text-decoration: line-through;opacity:0.6;">85$</span>&nbsp;&nbsp; 0$</div>
-                                <a href="" class="btn btn-success">Принять участие</a>
+                                <a href="https://virtual.p.smartexpert.net/login" target="_blank" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
                     </div>
@@ -968,7 +965,7 @@
                 <div class="media align-items-center">
                     <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h4 class="card_title">12 шагов для Х-кратного роста в карьере и бизнесе</h4>
+                        <h4 class="card_title">Пишем книгу 30 дней</h4>
                         <div class="b-card-body">
                             <ul class="list">
                                 <li>20 контентных прямых эфиров и сессий “вопрос-ответ”</li>
@@ -982,7 +979,7 @@
                             <div class="right">
                                 <div class="label">Стоимость:</div>
                                 <div class="price">200$</div>
-                                <a href="" class="btn btn-success">Принять участие</a>
+                                <a href="https://virtual.p.smartexpert.net/login" target="_blank" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
                     </div>
@@ -992,7 +989,7 @@
                 <div class="media align-items-center">
                     <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h4 class="card_title">12 шагов для Х-кратного роста в карьере и бизнесе</h4>
+                        <h4 class="card_title">Пишем книгу 30 дней</h4>
                         <div class="b-card-body">
                             <ul class="list">
                                 <li>20 контентных прямых эфиров и сессий “вопрос-ответ”</li>
@@ -1007,7 +1004,7 @@
                             <div class="right">
                                 <div class="label">Стоимость:</div>
                                 <div class="price">10 000$</div>
-                                <a href="" class="btn btn-success">Принять участие</a>
+                                <a href="https://virtual.p.smartexpert.net/login" target="_blank" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
                     </div>
@@ -1077,24 +1074,24 @@
     <section id="ya_nastavnik" class="sec sec_12">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-md-3">
-                    <h4>Компания</h4>
-                    <ul>
-                        <li><a href="#tarifs">Цены</a></li>
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">База знаний</a></li>
-                        <li><a href="#" class="d-none">Пробная версия</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
+                <div class="col-md-7">
                     <h4>Продукты</h4>
-                    <ul>
-                        <li><a href="#platforma_dlya_obuchenia">Платформа для онлайн-обучения</a></li>
-                        <li><a href="#marketing_instrument">Инструменты маркетинга</a></li>
-                        <li><a href="#prodvizhenie_lichnogo_brenda">Продвижение личного бренда</a></li>
-                        <li><a href="#globalnyi_poisk">Глобальный поиск экспертов</a></li>
-                        <li><a href="#delovaya_socialnaya_set">Деловая социальная сеть</a></li>
-                    </ul>
+                    <table class="table table-borderless">
+                        <tr>
+                            <td><a href="#platforma_dlya_obuchenia">Платформа для онлайн-обучения</a></td>
+                            <td><a href="#globalnyi_poisk">Глобальный поиск экспертов</a></td>
+                            <td><a href="#prodvizhenie_lichnogo_brenda">Продвижение личного бренда</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="#marketing_instrument">Инструменты маркетинга</a></td>
+                            <td><a href="#delovaya_socialnaya_set">Деловая социальная сеть</a></td>
+                            <td></td>
+                        </tr>
+                        <!-- <tr>
+                            <td><a href="#prodvizhenie_lichnogo_brenda">Продвижение личного бренда</a></td>
+                            <td></td>
+                        </tr> -->
+                    </table>
                 </div>
                 <div class="col-md-3">
                     <h4>Контактная информация</h4>
@@ -1110,15 +1107,6 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <select class="form-control" id="lang">
-                            <option selected>Russian</option>
-                            <option>Ukraine</option>
-                            <option>Engish</option>
-                        </select>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -1128,8 +1116,8 @@
         <div class="container">
             <nav>
                 <span>SmartExpert Copyright 2019</span>
-                <a href="">Договор публичной офферты</a>
-                <a href="">Политика конфедициальности</a>
+                <a href="https://p.smartexpert.net/documents/public_offer_se.pdf" target="_blank">Договор публичной офферты</a>
+                <a href="https://p.smartexpert.net/documents/privacy_policy_se.pdf" target="_blank">Политика конфедициальности</a>
             </nav>
         </div>
     </footer>
