--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
     <!-- / sec_are_you_ready -->
 
     <!-- sec_12 -->
-    <section id="ya_nastavnik" class="sec sec_12">
+    <section id="ya_nastavnik" class="sec sec_12 d-none">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-7">
